Use the same argline value for all modules that relies on the surefire plugin