@@ -105,7 +105,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>-Xmx4096m -XX:MaxPermSize=512M</argLine>
 					<systemPropertyVariables>
 						<java.security.policy>${project.build.testOutputDirectory}/proactive.security.policy</java.security.policy>
 						<log4j.configuration>file:${project.build.testOutputDirectory}/log4j.xml</log4j.configuration>
